# DatabricksFreeEdition

./: .gitignore  README.md  test.py
Geo/: README.md  databricks.yml  model.dbml
Geo/api_ingestion/: ingest_into_volume.py  ingestion.py
Geo/dashboards/: Countries_Details.lvdash  Opportunity_Summary.lvdash
Geo/resources/: dashboard.yml  pipeline.yml
Geo/silver_gold/: bridge_country_currency.py  bridge_country_language.py  dim_country.py  dim_currency.py  dim_language.py
Salesforce/: test_connection.py
UseCases/: AutoLoaderSample.py
UseCases/DatabricksCertification/Day1/Part1/: 00 - AGENDA.ipynb  01 - Exploring the Lab Environment.ipynb  02A - Data Ingestion with CREATE TABLE AS and COPY INTO.ipynb  02B -  Create Streaming Tables with SQL using Auto Loader.ipynb  04 - Handling CSV Ingestion with the Rescued Data Column.ipynb  05L - Creating Bronze Tables from CSV Files.ipynb  05L Solution - Creating Bronze Tables from CSV Files.ipynb  06 - Ingesting JSON files with Databricks.ipynb  07L - Creating Bronze Tables from JSON Files.ipynb  07L Solution - Creating Bronze Tables from JSON Files.ipynb  08 - Enterprise Data Ingestion with Lakeflow Connect.ipynb  09 - BONUS - Data Ingestion with MERGE INTO.ipynb  Appendix.dbc  Includes.dbc
databricks_library/: READ.md  pyproject.toml  setup.py
databricks_library/src/databricks_library/: __init__.py  tables.py
databricks_library/tests/: test.py
libraries/: README.md  pyproject.toml
libraries/src/databricks/: fixture.py  table.py
libraries/tests/: test.py
(+37 files in other folders)
